--- a/TodoIntro/app/templates/index.html
+++ b/TodoIntro/app/templates/index.html
@@ -7,4 +7,8 @@
 <body>
     <h1>Добро пожаловать {{user.username}}</h1>
 </body>
+    <h3>Список задач</h3>
+    {% for task in tasks %}
+    <div>{{task.descr}}</div>
+    {% endfor %}
 </html>
