added base.html and modified index.html

--- a/TodoIntro/app/templates/index.html
+++ b/TodoIntro/app/templates/index.html
@@ -1,14 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Home Page ToDo</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <h1>Добро пожаловать {{user.username}}</h1>
-</body>
-    <h3>Список задач</h3>
     {% for task in tasks %}
-    <div>{{task.descr}}</div>
+    <div><p>{{task.descr}}</p></div>
     {% endfor %}
-</html>
+{% endblock %}
