updated routes login()

--- a/TodoIntro/app/templates/base.html
+++ b/TodoIntro/app/templates/base.html
@@ -9,7 +9,11 @@
     {% endif %}
 </head>
 <body>
-    <div>Home: <a href="/index">В начало</a></div>
+    <div>
+        TODO:
+        <a href="/index">В начало</a>
+        <a href="/login">Вход</a>
+    </div>
     <hr>
     {% block content%}{% endblock %}
 </body>
