--- a/TodoIntro/app/templates/login.html
+++ b/TodoIntro/app/templates/login.html
@@ -1,4 +1,4 @@
-{% extends base.html %}
+{% extends "base.html" %}
 
 {% block content %}
     <h1>Войти</h1>
@@ -13,6 +13,6 @@
             {{ form.password(size=32) }}
         </p>
         <p>{{ form.remember_me.label}}: {{ form.remember_me() }}</p>
-        <p>{{ form_submit() }}</p>
+        <p>{{ form.submit() }}</p>
     </form>
 {% endblock %}
